Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-981

lustre client crash when accessing a lustre file mounted as loopback

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.3.0
    • Lustre 2.1.0
    • None
    • Ubuntu 10.04 LTS
      Kernel 2.6.32-131.6.1-lustre-2.1.0
    • 3
    • 4686

      To increase performance using small files, as several lustre guides recommend, we created a "big" file to use it mounted as loopback. When you write some data the client stops and the whole computer hangs.

        • It works using version 1.8.5!!!

      Example:

      dd if=/dev/zero of=/lustre21/my_fs_personal.iso bs=8192 count=9999
      mkfs.ext4 /lustre21/my_fs_personal.iso

      mount -t ext4 -o loop /lustre21/mi_fs_personal.iso /mnt

      dd if=/dev/zero of=/mnt/example_file.dat bs=8192 count=8999

            jay Jinshan Xiong (Inactive)
            gabriel Gabriel
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: